# Vcf_analyzer

./: .gitignore  README.md  pyproject.toml
src/: cli.py  runner.py
src/advanced_analyse/: read_file.py
src/basic_analyse/: clean_vcf_line.py  main.py
src/data/: loaders.py  preprocess.py  purification.py  routing.py
src/visualization/: main.py
