[tool.poetry]
name = "vcf-analyzer"
version = "0.1.0"
description = "Details in README.md file."
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{include = "vcf_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pysam = "^0.23.3"
cyvcf2 = "^0.31.1"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
